<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_background"
    tools:context="de.hdmstuttgart.thelaendofadventure.ui.fragments.MainPageFragment">

    <!--
    The MapView is generated as the bottom object.
    So that the imageButton etc. are generated on top of the map, the MapView must be at the top of the xml file.
    -->
    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mapbox_cameraTargetLat="48.77849654840248"
        app:mapbox_cameraTargetLng="9.17961910927422"
        app:mapbox_cameraZoom="17.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_page_profile_button_container"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/main_page_profile_button"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:contentDescription="@string/profileButton"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Circular"
            tools:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/main_page_profile_button_circular_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-7dp"
            android:layout_marginTop="-7dp"
            android:layout_marginEnd="-7dp"
            android:layout_marginBottom="-7dp"
            android:max="100"
            android:progress="50"
            android:rotation="180"
            app:indicatorColor="#03AC13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/barframe"
            android:contentDescription="@string/image_frame"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mainPage_profileLevelDisplay"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/level_frame"
            android:fontFamily="@font/minecraft_regular"
            android:gravity="center"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:text="@string/player_level"
            android:textColor="#FFFFFF"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="30dp"
            tools:ignore="TextViewEdits,TextContrastCheck"
            tools:layout_constraintHeight_max="30dp"
            tools:layout_marginLeft="90dp"
            tools:layout_marginTop="80dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/main_page_reset_player_location"
        android:layout_width="61.8dp"
        android:layout_height="61.8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/reset_button"
        app:layout_constraintBottom_toTopOf="@+id/main_page_profile_button_container"
        app:layout_constraintEnd_toEndOf="@+id/main_page_profile_button_container"
        app:layout_constraintStart_toStartOf="@+id/main_page_profile_button_container" />

</androidx.constraintlayout.widget.ConstraintLayout>
