...
                    app:layout_constraintWidth_max="320dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/user_page_name_field"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:autofillHints="name"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/user_page_profile_button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_page_profile_picture">


            <ProgressBar
...
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/userPageProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/map"
                android:contentDescription="@string/image_frame"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
...
