...
    <string name="popup_questText">XYZ will dir eine Quest anbieten</string>
    <string name="popup_questDetails">Ort: Die Taverne \n Aufgabe: xyz</string>
    <string name="popup_declineButton">Nein</string>
    <string name="popup_acceptButton">Ja</string>
    <string name="userCreationPage_nameInputField">Name</string>
    <string name="userCreationPage_title">The Länd of Adventure</string>
    <string name="userCreationPage_confirmButton">ERSTELLEN</string>
    <string name="userCreationPage_secondaryTitle">Charaktererstellung</string>
    <string name="userCreationPage_avatarButton">Profil Avatar</string>
    <string name="userPage_name">Name</string>
    <string name="avatar">Profilbild</string>
    <string name="profileLevel">3</string>
    <string name="userPage_levelText">Level:</string>
    <string name="profileButton">Profilebutton</string>
    <string name="userPage_profileImage">Profilbild</string>
    <string name="mainPage_profileButton">Profil</string>
    <string name="player_level">3</string>
    <string name="mainPage_compass">Kompass</string>
    <string name="questpage_backgroundrectangle">questPage_backgroundRectangle</string>
    <string name="quest_progress_numeric_text">%1$d / %2$d</string>
...
